--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -10,9 +10,11 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
 }
-.proceed-link{
+
+.proceed-link {
     text-decoration: none;
 }
+
 .btn-proceed {
     background: #FF9900;
     width: 90%;
@@ -24,4 +26,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.pagination {
+    justify-content: center;
+    width: 100%;
 }
